...
    <string name="action_search_profiles">Search for profiles</string>
    <string name="login_state">login state</string>
    <string name="edit_my_family_profile">Edit my profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_in">Sign In</string>
    <string name="my_name">My name (not shown to others)</string>
    <string name="action_done">Done</string>
    <string name="edit_my_user_profile">Edit my user profile</string>
    <string name="edit_my_preferences">Edit search preferences</string>
    <string name="edit">edit</string>
    <string name="please_enter_your_name">Please enter your name.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="device_version_too_low">Your device\'s Android version is too low.</string>
    <string name="please_enter_your_email">Please enter your email.</string>
...
